--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -62,7 +62,7 @@
         android:layout_width="0dp"
         android:layout_margin="5dp"
         app:layout_constraintTop_toBottomOf="@+id/appBar"
-        android:paddingBottom="50dp"
+        android:paddingBottom="80dp"
         android:clipToPadding="false"
         android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -75,7 +75,7 @@
 
     <com.github.ybq.android.spinkit.SpinKitView
 android:id="@+id/progressBar"
-style="@style/SpinKitView.Large.ChasingDots"
+style="@style/SpinKitView.Small.ChasingDots"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:visibility="invisible"
